--- a/test-ay.html
+++ b/test-ay.html
@@ -12,11 +12,25 @@
         <section class="form-container">
             <form class="form">
                 <img class="banner" src="banner@2x.png">
-                <h1>Student subscription</h1>
-                <div class="subtitle">Fill the following form to submit your application</div>
+                <div class="title">
+                    <h1>Student subscription</h1>
+                    <div class="subtitle">Fill the following form to submit your application</div>
+                </div>
                 <div class="fields">
                     <div class="field">
                         <label>First name</label>
+                        <div class="inputs">
+                            <input type="text">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label>Last Name</label>
+                        <div class="inputs">
+                            <input type="text">
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label>Course</label>
                         <div class="inputs">
                             <input type="text">
                         </div>
@@ -40,23 +54,36 @@
                         </div>
                     </div>
                     <div class="field field-col-2">
-                        <label>Gender</label>
+                        <label>Option</label>
+                        <div class="subtitle">Select all desired options</div>
                         <div class="inputs flex">
-                            <button class="btn selected">Man</button>
-                            <button class="btn selected">Woman</button>
-                            <button class="btn">Non-binary</button>
-                            <button class="btn">Man</button>
-                            <button class="btn">Woman</button>
-                            <button class="btn">Non-binary</button>
-                            <button class="btn">Man</button>
-                            <button class="btn">Woman</button>
-                            <button class="btn">Non-binary</button>
-                            <button class="btn">Man</button>
-                            <button class="btn">Woman</button>
-                            <button class="btn">Non-binary</button>
-                            <button class="btn">Man</button>
-                            <button class="btn">Woman</button>
-                            <button class="btn">Non-binary</button>
+                            <button class="btn">Language</button>
+                            <button class="btn selected">Art</button>
+                            <button class="btn">Music</button>
+                            <button class="btn">Science</button>
+                        </div>
+                    </div>
+                    <div class="field field-col-7">
+                        <label>Day</label>
+                        <div class="subtitle">Select desired days</div>
+                        <div class="inputs flex">
+                            <button class="botn">Mon</button>
+                            <button class="botn">Tue</button>
+                            <button class="botn">Wed</button>
+                            <button class="botn">Thu</button>
+                            <button class="botn">Fri</button>
+                            <button class="botn">Sat</button>
+                            <button class="botn">Sun</button>
+                        </div>
+                    </div>
+                    <div class="field field-submit">
+                        <div class="inputs">
+                            <button type="submit">Submit</button>
+                        </div>
+                    </div>
+                    <div class="field field-reset">
+                        <div class="inputs">
+                            <button type="reset">Reset form</button>
                         </div>
                     </div>
                 </div>
