Changement du code de base

--- a/test-ay.html
+++ b/test-ay.html
@@ -20,6 +20,16 @@
                         <div class="inputs">
                             <input type="text">
                         </div>
+                    <div class="field">
+                        <label>Last name</label>
+                        <div class="inputs">
+                            <input type="text">
+                        </div>
+                    <div class="field">
+                        <label>Course</label>
+                        <div class="inputs">
+                            <input type="text">
+                        </div>
                     </div>
                     <div class="field field-dob">
                         <label>Date of birth</label>
@@ -40,23 +50,35 @@
                         </div>
                     </div>
                     <div class="field field-col-2">
-                        <label>Gender</label>
-                        <div class="inputs flex">
-                            <button class="btn selected">Man</button>
-                            <button class="btn selected">Woman</button>
-                            <button class="btn">Non-binary</button>
-                            <button class="btn">Man</button>
-                            <button class="btn">Woman</button>
-                            <button class="btn">Non-binary</button>
-                            <button class="btn">Man</button>
-                            <button class="btn">Woman</button>
-                            <button class="btn">Non-binary</button>
-                            <button class="btn">Man</button>
-                            <button class="btn">Woman</button>
-                            <button class="btn">Non-binary</button>
-                            <button class="btn">Man</button>
-                            <button class="btn">Woman</button>
-                            <button class="btn">Non-binary</button>
+                        <label>Option</label>
+                            <div class="subtitle-2">Select all desired options</div>
+                            <div class="inputs flex">
+                            <button class="btn">Language</button>
+                            <button class="btn selected">Art</button>
+                            <button class="btn">Music</button>
+                            <button class="btn">Science</button>
+                        </div>
+                    <div class="field field-col-4">
+                        <label>Day</label>
+                            <div class="subtitle-2">Select desired days</div>
+                            <div class="inputs flex">
+                                <button class="btn">Mon</button>
+                                <button class="btn">Tue</button>
+                                <button class="btn">Wed</button>
+                                <button class="btn">Thu</button>
+                                <button class="btn">Fri</button>
+                                <button class="btn">Sat</button>
+                                <button class="btn">Sun</button>
+                            </div>
+                    </div>
+                    <div class="field field-submit">
+                        <div class="inputs">
+                            <button class="button">Submit</button>
+                        </div>
+                    </div>
+                    <div class="field field-reset">
+                        <div class="inputs">
+                            <button type="reset">Reset form</button>
                         </div>
                     </div>
                 </div>
